2001-12-19  Bradford Hovinen  <hovinen@ximian.com>

	* mouse-properties-capplet.c (double_click_from_gconf): Divide by
	1000.0, use floats
	(double_click_to_gconf): Implement
	(drawing_area_button_press_event): Don't call
	double_click_from_gconf
	(drawing_area_button_press_event): Use response of
	gconf_change_set_check_value to determine if value is in changeset

2001-12-18  Bradford Hovinen  <hovinen@ximian.com>

	* mouse-properties-capplet.c (double_click_from_gconf): Single
	closed-form formula here
	Code reorganization; many changes

2001-10-18  Bradford Hovinen  <hovinen@ximian.com>

	* mouse-properties-capplet.c (apply_settings): Only swap buttons 1
	and 3 in the mapping

2001-10-12  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am: Make OAF file creation generic

2001-09-28  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am: Remove support for disabling bonobo-conf build

	* Makefile.am: Change the binary name to
	mouse-properties-control and create a wrapper script from
	../common/wrapper-script.in to be named mouse-properties-capplet

2001-09-07  Chema Celorio  <chema@celorio.com>

	* mouse-properties-capplet.c (create_dialog): dont set the pixmaps
	(capplet_fool_the_linker): 
	(mouse_capplet_create_image_widget): 
	(mouse_capplet_create_image_widget_canvas): implement.
	This sets antialiased pixmaps for the mouse capplet. Maybe this
	call should in common. Closes bug #58293

2001-08-21  Bradford Hovinen  <hovinen@ximian.com>

	* mouse-properties-capplet.c (apply_settings): Use a CORBA
	exception structure

2001-07-31  Chema Celorio  <chema@celorio.com>

	* Makefile.am (cappletname): add DISTDIR to install-data-local

2001-07-27  Bradford Hovinen  <hovinen@ximian.com>

	* mouse-properties-capplet.c (apply_settings): Use MAX_THRESH -
	threshold value

	* mouse-properties.glade: Fix mouse speed and acceleration
	controls to be wider and to use discrete values

	* mouse-properties.xml: Change type of right-to-left to ulong
