@@ -7,6 +7,7 @@
 	double_click_from_gconf
 	(drawing_area_button_press_event): Use response of
 	gconf_change_set_check_value to determine if value is in changeset
+	(main): Remove --apply and --init-session-settings
 
 2001-12-18  Bradford Hovinen  <hovinen@ximian.com>
 
